minor bugfixes and updates to ensure IDF does not use statevars

--- a/applications/satellite/gen7/satprob.ipynb
+++ b/applications/satellite/gen7/satprob.ipynb
@@ -2,30 +2,65 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "16352d1c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from modeling.gen6.api import symbolic, acos\n",
-    "from modeling.gen7.api7 import MFunctionalSet, MFunctionalSetLeaf, FunctionSympy\n",
-    "from engine.torchdata import load_vals, print_formatted_table\n",
-    "import numpy as np\n",
-    "from scipy import optimize"
+    "from src.v4.torchdata import load_vals, unload_vals, print_formatted_table, perturb\n",
+    "from src.v5.problem import symbolic, acos, wrap_sympy_function\n",
+    "from src.v6.problem import MFunctionalSet, MFunctionalSetLeaf, get_sharedvars\n",
+    "from scipy import optimize\n",
+    "from sympy.utilities.lambdify import implemented_function\n",
+    "import sympy as sp\n",
+    "import numpy as np # for np.pi\n",
+    "import torch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 2,
+   "id": "84edb917",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def torch_linear_interp1d(x_new, x, y):\n",
+    "    # Assumes x is 1D, sorted, and no duplicate values\n",
+    "    idxs = torch.searchsorted(x, x_new, right=True)\n",
+    "    idxs = torch.clamp(idxs, 1, x.size(0)-1)\n",
+    "    x0, x1 = x[idxs-1], x[idxs]\n",
+    "    y0, y1 = y[idxs-1], y[idxs]\n",
+    "    weight = (x_new - x0) / (x1 - x0)\n",
+    "    return y0 + weight * (y1 - y0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f7cd1d7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h_i = torch.tensor([100, 150, 200, 250, 300, 350, 400, 450, 500, \n",
+    "                    550, 600, 650, 700, 750, 800, 850, 900, 950, 1000, 1250, 1500]) * 1e3\n",
+    "rho_i = torch.tensor([4.79e-07, 1.81e-09, 2.53e-10, 6.24e-11, 1.95e-11, 6.98e-12, 2.72e-12, 1.13e-12, 4.89e-13, 2.21e-13, 1.04e-13, 5.15e-14, 2.72e-14, 1.55e-14, 9.63e-15, 6.47e-15, 4.66e-15, 3.54e-15, 2.79e-15, 1.11e-15, 5.21e-16])\n",
+    "H_i = torch.tensor([5.9, 25.5, 37.5, 44.8, 50.3, 54.8, 58.2, 61.3, 64.5, 68.7, 74.8, 84.4, 99.3, 121, 151, 188, 226, 263, 296, 408, 516]) * 1e3\n",
+    "\n",
+    "rhointerp = lambda x: torch_linear_interp1d(x, torch.log(h_i), torch.log(rho_i))\n",
+    "Hinterp = lambda x: torch_linear_interp1d(x, torch.log(h_i), torch.log(H_i))\n",
+    "rhoapprox = lambda h: torch.tensor([rho_i[0]], dtype=torch.float64) if h<=h_i[0] else torch.exp(rhointerp(torch.log(h))) if h <= 1500e3 else torch.tensor([5.21e-16], dtype=torch.float64)\n",
+    "Happrox = lambda h: torch.tensor([H_i[0]], dtype=torch.float64) if h<=h_i[0] else torch.exp(Hinterp(torch.log(h))) if h <= 1500e3 else torch.tensor([516e3], dtype=torch.float64)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "0cd836ec",
    "metadata": {},
    "outputs": [],
    "source": [
-    "h, hkm, a, T, g, d, r = symbolic('h', 'hkm', 'a', 'T', 'g', 'd', 'r')\n",
-    "R, mu = 6371e3, 3.986e14\n",
-    "HMult = MFunctionalSetLeaf(\n",
-    "    h==hkm*1000\n",
-    ")\n",
+    "h, a, T, g, d, r = symbolic('h', 'a', 'T', 'g', 'd', 'r')\n",
+    "R, mu = 6378e3, 3.986e14\n",
     "Orbit = MFunctionalSetLeaf(\n",
     "    a==h+R, \n",
     "    T==2*np.pi*(a**3/mu)**0.5, \n",
@@ -34,8 +69,8 @@
     "    r==(h**2+2*R*h)**0.5\n",
     ") # by default configured to elimination of state variables\n",
     "\n",
-    "m_A, P_c, P_T, E_b, m_b = symbolic('m_A', 'P_c', 'P_T', 'E_b', 'm_b')\n",
-    "eta_A, rho_A, rho_b, P_l, A, Q = 0.3, 10, 0.002e-3, 12, 0.05, 1365\n",
+    "m_A, P_c, P_T, E_b, m_b, A = symbolic('m_A', 'P_c', 'P_T', 'E_b', 'm_b', 'A')\n",
+    "eta_A, rho_A, rho_b, P_l, Q = 0.3, 10, 0.002e-3, 12, 1367\n",
     "Power = MFunctionalSetLeaf(\n",
     "    m_A==rho_A*A, \n",
     "    P_c==d*A*Q*eta_A, \n",
@@ -53,8 +88,8 @@
     ")\n",
     "\n",
     "b, l_c, D_T, m_T, EN, G_r = symbolic('b', 'l_c', 'D_T', 'm_T', 'EN', 'G_r')\n",
-    "rho_T, G_T, D_r, eta, T_s, k, c, F = 0.2, 16.5, 5.3, 0.55, 135, 1.38064852e-23, 2.99e8, 2.2e9\n",
     "dBtoLinear = lambda db: 10**(db/10)\n",
+    "rho_T, G_T, D_r, eta, T_s, k, c, F = 0.2, dBtoLinear(16.5), 5.3, 0.55, 135, 1.38064852e-23, 2.99e8, 2.2e9\n",
     "L = dBtoLinear(1+8.5+0.3+0.1)\n",
     "Comms = MFunctionalSetLeaf(\n",
     "    b==D/T, \n",
@@ -65,8 +100,9 @@
     "    EN==P_T*G_r*G_T/(L*k*T_s*b)*(l_c/(4*np.pi*r))**2,\n",
     ")\n",
     "\n",
-    "mt, m_s = symbolic('m_t', 'm_s')\n",
-    "eta_S, m_pr = 0.2, 0.5\n",
+    "mt, m_s, m_pr = symbolic('m_t', 'm_s', 'm_pr')\n",
+    "eta_S = 0.2\n",
+    "# m_pr = 0.5\n",
     "Struct = MFunctionalSetLeaf(\n",
     "    m_s == eta_S*mt\n",
     ")\n",
@@ -74,9 +110,367 @@
     "    mt == m_A + m_b + m_p + m_T + m_pr + m_s \n",
     ")\n",
     "\n",
-    "MDA = MFunctionalSet(HMult, Orbit, Power, Payload, Comms)\n",
-    "FPF = MDA.subsetof(5 <= X_r, X_r <= 100,\n",
-    "                   300e3 <= h ).minimize(m_A + m_b + m_p + m_T)"
+    "Ln, Lp, Lt = symbolic('Ln', 'Lp', 'Lt')\n",
+    "L_min, C_D, I_sp, G = 10, 2.2, 70, 9.81\n",
+    "H = wrap_sympy_function(implemented_function(sp.Function('H'), Happrox))\n",
+    "rho = wrap_sympy_function(implemented_function(sp.Function('rho'),  rhoapprox))\n",
+    "\n",
+    "Propulsion = MFunctionalSetLeaf(\n",
+    "    Ln == H(h)*mt/(2*np.pi*C_D*A*rho(h)*a**2)*T/31536000,\n",
+    "    Lp == m_pr*I_sp*G*a/(0.5*C_D*A*H(h)*mu)/31536000,\n",
+    "    Lt == Ln + Lp\n",
+    ")\n",
+    "\n",
+    "MDA = MFunctionalSet(Orbit, Power, Payload, Comms, Propulsion, Struct, Mass)\n",
+    "FPF = MDA.subsetof( 1 <= X_r, X_r <= 5, 0<=m_pr,\n",
+    "                   400e3 >= h, 10 <= Lt, 14.125<=EN).minimize(mt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d856f15f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SPF_MDF = FPF.config(elim=[Orbit, Power, Payload, Comms, MFunctionalSet(Struct, Mass).config(residuals=[Struct, Mass]), Propulsion])\n",
+    "SPF_IDF = FPF.config(parallel=FPF.supersets)\n",
+    "SPF_AAO = FPF.config(residuals=FPF.supersets) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9353da36",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([Lt, EN, m_t, m_s, m_T, m_A, m_b, m_p, a, T, r, P_T, D, d], 14, 28)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_, ineq, eq, obj, indices = SPF_MDF.gather_sets()\n",
+    "sharedidxs = get_sharedvars([elt.build(indices=indices).analysis for elt in MDA.supersets]+[ineq]+eq+[obj]) # need to include constraints and objectives\n",
+    "sharedvars = [key for key,var in indices.items() if var.item() in sharedidxs]\n",
+    "sharedvars, len(sharedvars), len(indices)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f1f3239",
+   "metadata": {},
+   "source": [
+    "### MDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "aa87b5cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h      hkm\n",
+      "5.00e5 500\n",
+      "r      h      d     g     a      T       \n",
+      "2.57e6 5.00e5 0.622 0.122 6.88e6 5676.812\n",
+      "m_b   E_b    d     P_c    T        P_T   A    m_A\n",
+      "0.279 1.40e5 0.622 15.308 5676.812 3.308 0.06 0.6\n",
+      "m_p   D_p  D        X_r h     \n",
+      "0.011 0.03 6.41e+10 10  5.00e5\n",
+      "EN      b      P_T   r      l_c   G_r      m_T   D_T  D        T       \n",
+      "104.632 1.13e7 3.308 2.57e6 0.136 8255.002 0.049 0.39 6.41e+10 5676.812\n",
+      "Lt    Ln    Lp m_pr A    a      h      m_t   T       \n",
+      "1.467 1.467 0  1    0.06 6.88e6 5.00e5 2.423 5676.812\n",
+      "m_s   m_t  \n",
+      "0.485 2.423\n",
+      "m_t   m_s   m_b   m_pr m_p   m_A m_T  \n",
+      "2.423 0.485 0.279 1    0.011 0.6 0.049\n"
+     ]
+    }
+   ],
+   "source": [
+    "f_MDF = SPF_MDF.build()\n",
+    "x0 = {\"hkm\": 500, \"m_pr\": 1, \"X_r\": 10, \"A\":0.06}\n",
+    "x0_MDA = f_MDF.analysis(load_vals(x0, f_MDF.indices, isdict=True, default=1.1))\n",
+    "for elt in SPF_MDF.supersets:\n",
+    "    fP = elt.build()\n",
+    "    xP = load_vals(unload_vals(x0_MDA, f_MDF.indices), fP.indices, isdict=True)\n",
+    "    print_formatted_table([xP], fP.indices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "7fca24a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obj, dobj, xguess, cons, idxs, solidxs = SPF_MDF.build_opt(x0={str(key): xguess2[val].item() for key,val in indices.items()})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "9d5b26e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " message: Optimization terminated successfully\n",
+       " success: True\n",
+       "  status: 0\n",
+       "     fun: 5.804200911257506\n",
+       "       x: [ 5.087e-02  4.000e+02  3.833e+00  5.000e+00]\n",
+       "     nit: 7\n",
+       "     jac: [ 1.819e+01  1.652e-04  1.250e+00 -8.085e-03]\n",
+       "    nfev: 8\n",
+       "    njev: 6"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xsol = optimize.minimize(obj, xguess, jac=dobj, \n",
+    "                         constraints=cons, method='SLSQP')\n",
+    "xsol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "ed27bc4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b      d    hkm EN     m_A   m_s   r      T        D        l_c   Hval   P_T   Lp    D_T  m_b   a      A     g    h      m_t   D_p   X_r m_pr  E_b    P_c    Ln    m_p   m_T   Lt rhoval   G_r     \n",
+      "2.31e7 0.61 400 14.125 0.509 1.161 2.29e6 5553.459 1.28e+11 0.136 5.82e4 0.725 9.323 0.39 0.232 6.78e6 0.051 0.11 4.00e5 5.804 0.049 5   3.833 1.16e5 12.725 0.677 0.022 0.049 10 2.72e-12 8255.002\n"
+     ]
+    }
+   ],
+   "source": [
+    "idxrev = {var.item():key for key,var in idxs.items()}\n",
+    "xsoldict = {str(idxrev[key.item()]): xsol.x[idx] for idx,key in enumerate(solidxs)}\n",
+    "xidxed = load_vals(xsoldict, indices, isdict=True, default=1.1)\n",
+    "xsolvalall = f_MDF.analysis(xidxed)\n",
+    "print_formatted_table([xsolvalall], idxs, idxrev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "55022de5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00,\n",
+       "        0.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00,\n",
+       "        0.0000e+00, 0.0000e+00, 0.0000e+00, 1.1102e-16, 0.0000e+00, 0.0000e+00,\n",
+       "        0.0000e+00, 0.0000e+00, 2.2204e-16, 0.0000e+00, 0.0000e+00, 0.0000e+00,\n",
+       "        0.0000e+00, 0.0000e+00, 0.0000e+00], dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f_MDF.residual(xsolvalall.clone())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e3351dd",
+   "metadata": {},
+   "source": [
+    "### AAO/IDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "5bffdaaa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x0 = {\"hkm\": 400, \"m_pr\": 1, \"X_r\": 5, \"A\":0.05}\n",
+    "xidxed = load_vals(x0, indices, isdict=True, default=1.1)\n",
+    "xguess2 = f_MDF.analysis(xidxed)\n",
+    "sets,_,_,_, indices = SPF_AAO.gather_sets()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "1a650e2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obj, dobj, xguess, cons, idxs, solidxs = SPF_IDF.build_opt(x0={str(key): xguess2[val].item() for key,val in indices.items()})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "ef949228",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xsol = optimize.minimize(obj, xguess, jac=dobj, \n",
+    "                         constraints=cons, method='SLSQP')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "6fae2b49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obj, dobj, xguess, cons, idxs, solidxs = SPF_AAO.build_opt(x0={str(key): xguess3[val].item() for key,val in indices.items()})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "2fbb881f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xsol = optimize.minimize(obj, xguess, jac=dobj, \n",
+    "                         constraints=cons, method='SLSQP')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "d2abdf69",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " message: Optimization terminated successfully\n",
+       " success: True\n",
+       "  status: 0\n",
+       "     fun: 5.804200911102231\n",
+       "       x: [ 5.804e+00  5.000e+00 ...  9.323e+00  1.161e+00]\n",
+       "     nit: 15\n",
+       "     jac: [ 1.000e+00  0.000e+00 ...  0.000e+00  0.000e+00]\n",
+       "    nfev: 27\n",
+       "    njev: 15"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xsol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "fd667a2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b      d    hkm     EN     m_A   m_s   r      T        D        l_c   Hval   P_T   Lp    D_T  m_b   a      A     g    h      m_t   D_p   X_r m_pr  E_b    P_c    Ln    m_p   m_T   Lt    rhoval   G_r     \n",
+      "2.31e7 0.61 400     9.861  0.5   0.22  2.29e6 5553.459 1.28e+11 0.136 5.82e4 0.506 2.475 0.39 0.228 6.78e6 0.05  0.11 4.00e5 2.018 0.049 5   1     1.14e5 12.506 0.131 0.022 0.049 2.606 2.72e-12 8255.002\n",
+      "2.31e7 0.61 399.999 14.125 0.509 1.161 2.29e6 5553.458 1.28e+11 0.136 5.82e4 0.725 9.323 0.39 0.232 6.78e6 0.051 0.11 4.00e5 5.804 0.049 5   3.833 1.16e5 12.725 0.677 0.022 0.049 10    2.72e-12 8255.002\n"
+     ]
+    }
+   ],
+   "source": [
+    "idxrev = {var.item():key for key,var in idxs.items()}\n",
+    "xsolval = xguess2.clone().numpy()\n",
+    "xsolval[solidxs] = xsol.x\n",
+    "print_formatted_table([xguess2, xsolval], idxs, idxrev)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70d0e61b",
+   "metadata": {},
+   "source": [
+    "### Reconfiguring architectures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d453ff9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SPF_IDF = FPF.config(parallel=MDA.supersets) # should eliminate state variables\n",
+    "SPF_MDF_full = FPF.config(elim=[MDA.config(residuals=MDA.supersets)])\n",
+    "scc_order = [{2}, {1}, {0}]\n",
+    "SPF_MDF_compact = FPF.config_from_order(scc_order)\n",
+    "outset_tear, wf_tear = None, None\n",
+    "SPF_MDF_tear = FPF.reconfigure(outset_tear).config_from_workflow(wf_tear)\n",
+    "outset_tear_extended, wf_tear_extended = None, None\n",
+    "SPF_MDF_tear_extended = FPF.reconfigure(outset_tear_extended).config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "4d6dcc99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MDA1 = MFunctionalSet(Orbit, Propulsion).config(elim=[Orbit, Propulsion])\n",
+    "sets,_,_,_, indices = MDA1.gather_sets()\n",
+    "f = MDA1.build()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6aa16201",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d    Lp    rhoval r      a      Hval   T        Ln    h      m_t Lt    g   \n",
+      "0.61 1.236 0      2.29e6 6.77e6 5.82e4 5544.858 0.178 4.00e5 1.5 1.414 0.11\n"
+     ]
+    }
+   ],
+   "source": [
+    "x0 = {\"h\": 400e3, \"a\": 400e3 + 6371e3, \"m_t\": 1.5}\n",
+    "xidxed = load_vals(x0, indices, isdict=True)\n",
+    "f.analysis(xidxed)\n",
+    "idxrev = {var.item():key for key,var in indices.items()}\n",
+    "print_formatted_table([f.analysis(xidxed)], indices, idxrev)"
    ]
   },
   {
@@ -317,18 +711,6 @@
     "SPF_AAO = FPF.config(residuals=Orbit.supersets+Power.supersets+Payload.supersets)\n",
     "SPF_MDF1 = FPF.config(elim=[Orbit, Power, Payload])\n",
     "SPF_MDF2 = FPF.config(elim=[MDA.config(parallel=[Orbit, Power, Payload])])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 132,
-   "id": "c17a1191",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# HMult = MFunctionalSetLeaf(\n",
-    "#     h==hkm*1000\n",
-    "# )"
    ]
   },
   {
